--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,43 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+  # State Management & Navigation - GetX remplace Riverpod + go_router
+  get: ^4.6.6
+  
+  # Appwrite
+  appwrite: ^13.0.0
+  
+  # UI/UX (inchangé)
+  flutter_svg: ^2.0.10
+  cached_network_image: ^3.3.1
+  shimmer: ^3.0.0
+  flutter_spinkit: ^5.2.1
+  
+  # PDF (inchangé)
+  flutter_pdfview: ^1.3.2
+  pdf: ^3.11.1
+  path_provider: ^2.1.4
+  
+  # Fichiers (inchangé)
+  open_filex: ^4.5.0
+  permission_handler: ^11.3.1
+  file_picker: ^8.1.4
+  
+  # Network (inchangé)
+  dio: ^5.7.0
+  connectivity_plus: ^6.1.1
+  
+  # Storage Local (inchangé)
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.3.3
+  
+  # Utils (inchangé)
+  equatable: ^2.0.5      # Pour entities
+  intl: ^0.19.0
+  url_launcher: ^6.3.1
+  share_plus: ^10.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
