--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   intl: ^0.19.0
   url_launcher: ^6.3.1
   share_plus: ^10.1.2
+  device_info_plus: ^10.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
