--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
   flutter_spinkit: ^5.2.1
+  google_fonts: ^6.2.1
   
   # PDF (inchangé)
   flutter_pdfview: ^1.3.2
