--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,33 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI & Design
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.1.0
+  flutter_spinkit: ^5.2.0
+
+  # State Management
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+
+  # Backend & API
+  appwrite: ^14.0.0
+  dio: ^5.4.0
+
+  # PDF Viewer
+  syncfusion_flutter_pdfviewer: ^28.1.37
+
+  # File & Storage
+  path_provider: ^2.1.1
+  permission_handler: ^11.3.0
+
+  # Network
+  connectivity_plus: ^5.0.1
+
+  # Utils
+  logger: ^2.1.0
+  intl: ^0.19.0
+  mime: ^1.0.4
 
 dev_dependencies:
   flutter_test:
