--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
 
   # PDF Viewer
   syncfusion_flutter_pdfviewer: ^28.1.37
+  device_info_plus: ^10.1.0
 
   # File & Storage
   path_provider: ^2.1.1
