--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,15 @@ dependencies:
   # State Management
   flutter_bloc: ^9.1.1
   equatable: ^2.0.5
+  flutter_riverpod: ^2.4.9
 
   # Backend & API
   dio: ^5.4.0
+  go_router: ^13.0.0
 
   # PDF Viewer
   syncfusion_flutter_pdfviewer: ^31.2.16
+  flutter_cached_pdfview: ^0.4.2
 
   # File & Storage
   path_provider: ^2.1.1
@@ -53,6 +56,7 @@ dependencies:
   # Network
   connectivity_plus: ^7.0.0
   http: ^1.2.0
+  url_launcher: ^6.2.1
 
   # Utils
   logger: ^2.1.0
@@ -84,9 +88,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
