--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0
   flutter_spinkit: ^5.2.0
+  flutter_svg: ^2.0.10
 
   # State Management
   flutter_bloc: ^9.1.1
