--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   device_info_plus: ^12.3.0
   shared_preferences: ^2.2.2
   timeago: ^3.7.0
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
